Make buildable on Java 17, update all